<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="android.example.myapplication.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="android.example.myapplication.ui.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_borrowings"
        android:name="android.example.myapplication.ui.BorrowingsFragment"
        android:label="@string/title_borrowings"
        tools:layout="@layout/fragment_borrowings" />
</navigation>