<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/davys_grey">

    <EditText
        android:id="@+id/signup_address_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_your_address"
        android:inputType="text"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_telephone_txt" />

    <TextView
        android:id="@+id/signup_firstname"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_firstname"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_firstname_txt"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

    <TextView
        android:id="@+id/signup_lastname"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_lastname"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_lastname_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_firstname" />

    <TextView
        android:id="@+id/signup_telephone"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_telephone"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_telephone_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_lastname" />

    <TextView
        android:id="@+id/signup_address"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lbl_address"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_address_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_telephone" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/davys_grey"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/sign_up_lbl"
        android:textColor="@color/alabaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_address_txt"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/signup_password_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_txt" />

    <EditText
        android:id="@+id/signup_confirm_password_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_txt" />

    <EditText
        android:id="@+id/signup_firstname_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="text"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_txt" />

    <EditText
        android:id="@+id/signup_lastname_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="text"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_firstname_txt" />

    <EditText
        android:id="@+id/signup_telephone_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_your_telephone_number"
        android:inputType="phone"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_lastname_txt" />

    <TextView
        android:id="@+id/signup_email"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_email_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_signup" />

    <EditText
        android:id="@+id/signup_email_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/email_hint_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="149dp" />

    <TextView
        android:id="@+id/signup_password"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password_hint_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_password_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <TextView
        android:id="@+id/signup_confirm_password"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm_npassword"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signup_confirm_password_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <TextView
        android:id="@+id/lbl_signup"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textColor="@color/alabaster"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_email_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>