<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/davys_grey">

    <Button
        android:id="@+id/btn_login"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:background="@color/davys_grey"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/login_btn"
        android:textColor="@color/alabaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_txt"
        app:layout_constraintVertical_bias="0.018" />

    <EditText
        android:id="@+id/login_password_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/login_email"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/login_email_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_lbl" />

    <EditText
        android:id="@+id/login_email_txt"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/alabaster"
        android:textColorHighlight="@color/ebony"
        android:textColorHint="@color/cambridge_blue"
        android:textColorLink="@color/cambridge_blue"
        app:layout_constraintBottom_toTopOf="@+id/login_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/login_lbl"
        tools:layout_editor_absoluteX="123dp" />

    <TextView
        android:id="@+id/login_password"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password_hint_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/login_password_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <TextView
        android:id="@+id/login_lbl"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/login_lbl"
        android:textColor="@color/alabaster"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>